--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+.app {
+  font-family: Courier New, Courier, monospace;
+  margin: 0 auto;
+  width: 200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.move {
+  background-color: white;
+  border: 1px solid black;
+  height: 60px;
+  margin: 1px;
+  transition: background-color .5s ease;
+  width: 60px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.board.won-row0 .row0 .move,
+.board.won-row1 .row1 .move,
+.board.won-row2 .row2 .move,
+.board.won-column0 .move.column0,
+.board.won-column1 .move.column1,
+.board.won-column2 .move.column2,
+.board.won-leftSlant .row0 .move.column0,
+.board.won-leftSlant .row1 .move.column1,
+.board.won-leftSlant .row2 .move.column2,
+.board.won-rightSlant .row0 .move.column2,
+.board.won-rightSlant .row1 .move.column1,
+.board.won-rightSlant .row2 .move.column0 {
+  background-color: mediumseagreen;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.board.draw .move {
+  background-color: palevioletred;
+}
+
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
+@keyframes move-appear {
   from {
-    transform: rotate(0deg);
+    transform: scale(1.9);
   }
   to {
-    transform: rotate(360deg);
+    transform: scale(1);
   }
+}
+
+svg {
+  animation-name: move-appear;
+  animation-duration: .15s;
 }
