--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .app {
-  font-family: Courier New, Courier, monospace;
+  font-family: 'Lato', sans-serif;
   margin: 0 auto;
-  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
 }
 
 .move {
@@ -34,6 +38,26 @@
 
 .row {
   display: flex;
+}
+
+.logs {
+  list-style: none;
+  padding: 0;
+  margin: 15px 0;
+  font-size: 13px;
+}
+
+.logs li {
+  margin: 5px 0;
+}
+
+.startAgain {
+  cursor: pointer;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  border: none;
+  margin: 10px 0;
 }
 
 
